--- a/src/app/list-pap/list-pap.page.html
+++ b/src/app/list-pap/list-pap.page.html
@@ -12,47 +12,24 @@
 <ion-content fullscreen>
   <ion-searchbar (ionChange)="search($event)"></ion-searchbar>
   <ion-list lines="full">
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor="let registry of registries">
       <ion-item>
-        <ion-label [color]="test === 'pagado' ? 'primary' : 'secondary'">
-          <h4>Registro Movistar Play</h4>
-          <p>Fecha: 31/07/2020 00:30hrs</p>
-          <p>Estado de pago: Pagado</p>
+        <ion-label [color]="registry.data().paymentStatus === 'Pagado' ? 'primary' : 'danger'">
+          <h4>{{registry.data().project}}</h4>
+          <p>Fecha: {{getDate(registry.data().datetime)}}</p>
+          <p>Estado de pago: {{registry.data().paymentStatus}}</p>
         </ion-label>
       </ion-item>
       <ion-item-options>
-        <ion-item-option color="danger" (click)="deleteRegistry()" slot="icon-only">
-          <ion-icon name="trash-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label [color]="test === 'pagado' ? 'primary' : 'secondary'">
-          <h4>Registro Movistar Play</h4>
-          <p>Fecha: 03/08/2020 15:30hrs</p>
-          <p>Estado de pago: Pagado</p>
-        </ion-label>
-      </ion-item>
-      <ion-item-options>
-        <ion-item-option color="danger" (click)="deleteRegistry()" slot="icon-only">
-          <ion-icon name="trash-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label [color]="test !== 'pagado' ? 'primary' : 'danger'">
-          <h4>Registro Movistar Play</h4>
-          <p>Fecha: 05/08/2020 22:30hrs</p>
-          <p>Estado de pago: Pendiente</p>
-        </ion-label>
-      </ion-item>
-      <ion-item-options>
-        <ion-item-option color="danger" (click)="deleteRegistry(item)" slot="icon-only">
+        <ion-item-option color="danger" (click)="deleteRegistry(registry)" slot="icon-only">
           <ion-icon name="trash-outline"></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="addNewPAP()">
+    <ion-fab-button color="secondary">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
