--- a/src/app/shared/footer/footer.page.html
+++ b/src/app/shared/footer/footer.page.html
@@ -1,5 +1,7 @@
 <ion-footer>
   <ion-toolbar color="primary">
-    <ion-title>Footer</ion-title>
+    <ion-title class="footer-title">
+      Registra tu PaP - {{date}}
+    </ion-title>
   </ion-toolbar>
 </ion-footer>
